[gd_scene load_steps=12 format=3 uid="uid://b0bc4nfc0uumy"]

[ext_resource type="Script" uid="uid://cn8p4ox8w82lm" path="res://Enemy/enemy.gd" id="1_px1sc"]
[ext_resource type="Texture2D" uid="uid://bypu5ku7t3x0g" path="res://Enemy/slime-Sheet.png" id="2_px1sc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eqilm"]
size = Vector2(21, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_am0pq"]
atlas = ExtResource("2_px1sc")
region = Rect2(0, 26, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqilm"]
atlas = ExtResource("2_px1sc")
region = Rect2(32, 26, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncf7h"]
atlas = ExtResource("2_px1sc")
region = Rect2(64, 26, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6jha"]
atlas = ExtResource("2_px1sc")
region = Rect2(96, 26, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_glvfu"]
atlas = ExtResource("2_px1sc")
region = Rect2(128, 26, 32, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_px1sc"]
atlas = ExtResource("2_px1sc")
region = Rect2(128, 26, 32, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_glvfu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_am0pq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqilm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncf7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6jha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glvfu")
}],
"loop": true,
"name": &"Attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_px1sc")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_px1sc"]
radius = 28.0
height = 110.0

[node name="Enemy" type="CharacterBody2D" groups=["EnemyGroup"]]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_px1sc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -8.5)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_eqilm")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 3.0
target_desired_distance = 3.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -22)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_glvfu")
animation = &"Run"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_px1sc")
debug_color = Color(1, 0, 0, 0.419608)

[node name="animation Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="damage timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="damage timer" to="." method="_on_damage_timer_timeout"]
